[package]
name = "vibesort"
version = "0.3.0"
edition = "2021"
authors = ["WarpWing", "not-a-cowfr"]
readme = "README.md"
description = "Blazingly fast vibesort implementation in Rust using Llama 4 Maverick on Cerebras Cloud."
repository = "https://github.com/WarpWing/vibesort-rs"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
